auth-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  namespace: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 935451498002.dkr.ecr.us-east-1.amazonaws.com/toggle-feature/microservices:auth-service-1.0.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi" 
              cpu: "250m"   
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8001
          startupProbe:
            httpGet: { path: /health, port: 8001 }
            periodSeconds: 5
            failureThreshold: 6
